# KiwiFilter

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  mainFilter.cpp
src/filter/: CMakeLists.txt  DataProvider.cpp  DataProvider.hpp  EKF.cpp  EKF.hpp  Filter.hpp  FilterFactory.cpp  FilterFactory.hpp  KalmanFilter.hpp  MedianWindowFilter.cpp  MedianWindowFilter.hpp  UKF.cpp  UKF.hpp  WindowFilter.cpp  WindowFilter.hpp
